objects/PRF__c.object
<CustomObject>
    <fields>
        <fullName>ADA_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ADA Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADA_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ADA Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AIA_Prescription_RX__c</fullName>
        <label>Prescription RX</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Preferred Choice</fullName>
                </value>
                <value>
                    <fullName>Exclusive Choice</fullName>
                </value>
                <value>
                    <fullName>Maintenance Choice</fullName>
                </value>
                <value>
                    <fullName>Broad (National)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account1_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>Opportunity__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>Benefit_Request_Form__r.Account_Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>BLANKVALUE (RFP_Name__r.Opportunity_Name__r.Account.Name , Opportunity__r.Account.Name)</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Services_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Services - Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>RFP_Name__r.Opportunity_Name__r.Account.BillingStreet &amp; BR() &amp;
RFP_Name__r.Opportunity_Name__r.Account.BillingCity &amp; ', ' &amp; RFP_Name__r.Opportunity_Name__r.Account.BillingState &amp;  ' ' &amp;
RFP_Name__r.Opportunity_Name__r.Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agg_Employee_1__c</fullName>
        <label>Agg. Employee + 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agg_Employee_Spouse__c</fullName>
        <label>Agg. Employee + Spouse</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agg_Family__c</fullName>
        <label>Agg. Family</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agg_Premium__c</fullName>
        <label>Agg. Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agg_Single__c</fullName>
        <label>Agg. Single</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alt_Network_State__c</fullName>
        <label>Alt. Network State</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternate_Ded__c</fullName>
        <label>Alternate Ded.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alternative_Network__c</fullName>
        <label>Alternative Network</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Analysis_Requested__c</fullName>
        <label>Analysis Requested</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>ADA Code Analysis</fullName>
                </value>
                <value>
                    <fullName>CPT Code Analysis</fullName>
                </value>
                <value>
                    <fullName>Disruption</fullName>
                </value>
                <value>
                    <fullName>GeoAccess</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benefit_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Request Form</label>
        <referenceTo>Benfit_Request_Form__c</referenceTo>
        <relationshipLabel>Proposal Request Forms</relationshipLabel>
        <relationshipName>Proposal_Request_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefits_Services__c</fullName>
        <label>Benefits/Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Care Management</fullName>
                </value>
                <value>
                    <fullName>Case Management</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Disease Management</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>RX</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Wellness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Binder_Size_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Binder Size Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Binder_Size__c</fullName>
        <label>Binder Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3"</fullName>
                </value>
                <value>
                    <fullName>2"</fullName>
                </value>
                <value>
                    <fullName>1 1/2"</fullName>
                </value>
                <value>
                    <fullName>1"</fullName>
                </value>
                <value>
                    <fullName>1/2"</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <formula>TEXT( RFP_Name__r.Opportunity_Name__r.Business_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <formula>CASE(RFP_Name__r.Opportunity_Name__r.Business__c,
"1-50", "1-50",
"51-199 Renewal Sales","51-199 Renewal Sales",
"CFA Renewal Sales","CFA Renewal Sales",
"FEP","FEP",
"Ind Govt Programs","Ind Govt Programs",
"Labor New Business Sales", "Labor New Business Sales",
"Labor Renewal Sales","Labor Renewal Sales",
"Local Renewal Sales","Local Renewal Sales",
"National Renewal Sales","National Renewal Sales",
"NCAS Renewal Sales","NCAS Renewal Sales",
"New Business Sales","New Business Sales",
"Regional Renewal Sales","Regional Renewal Sales",
 "PRF Record, " + Name + ": An element is required in the Business formula field!  Please give this entire message to the System Administrator.")</formula>
        <label>Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH_Addl_Info__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CDH Add'l Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CDH_Administrator__c</fullName>
        <label>CDH Administrator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ConnectYourCare</fullName>
                </value>
                <value>
                    <fullName>PayFlex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDH_Funding_Arrangement__c</fullName>
        <label>CDH Funding Arrangement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HSA</fullName>
                </value>
                <value>
                    <fullName>HRA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDH_Products__c</fullName>
        <label>CDH Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blue Preferred</fullName>
                </value>
                <value>
                    <fullName>BC Advantage</fullName>
                </value>
                <value>
                    <fullName>BC HMO OA</fullName>
                </value>
                <value>
                    <fullName>BC OOP OA</fullName>
                </value>
                <value>
                    <fullName>HB 2.0</fullName>
                </value>
                <value>
                    <fullName>HB Advantage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CD_Label_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CD/Label/Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CFA_Fee__c</fullName>
        <label>CFA Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>COBRA_Admin_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>COBRA Admin - Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>COBRA_Admin__c</fullName>
        <label>COBRA Admin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ConnectYourCare</fullName>
                </value>
                <value>
                    <fullName>PayFlex (must have CDH)</fullName>
                </value>
                <value>
                    <fullName>HFS Benefits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPT_Code_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CPT Code Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPT_Code_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CPT Code Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CareFirsts_Value_Proposition__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CareFirst's Value Proposition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Carefirst_Mktg_Svc_Area_Based_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carefirst Mktg Svc Area Based Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cede_Letter_Forthcoming__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cede Letter Forthcoming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_Off__c</fullName>
        <label>Check Off Cede Information</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Required</fullName>
                </value>
                <value>
                    <fullName>On File</fullName>
                </value>
                <value>
                    <fullName>Obtaining</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claims_Repricing_Medical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claims Repricing Medical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claims_Repricing_RX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claims Repricing RX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claims_Repricing_Vision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claims Repricing Vision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claims_System__c</fullName>
        <label>Claims System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Facets</fullName>
                </value>
                <value>
                    <fullName>LuminX (TPA)</fullName>
                </value>
                <value>
                    <fullName>NASCO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_Ins_Factor_100__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Co-Ins. Factor 100%</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Co_Title_NAFBA1_07_R_0036_or_Verizon__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Co. Title (NAFBA1-07-R-0036 or Verizon)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consultant_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Can't find the consultant?  Please contact the Distribution Strategy group</inlineHelpText>
        <label>Consultant Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Consultant__c</field>
                <operation>equals</operation>
                <value>true</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Proposal Request Forms</relationshipLabel>
        <relationshipName>Proposal_Request_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consultant</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Info__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Business Phone, Cell Phone, Email, etc.</inlineHelpText>
        <label>Contact Info</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Cover_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cover_Design__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cover Design</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Broker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is a look up to the Accounts that are of partner type</inlineHelpText>
        <label>Current Broker</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Proposal Request Forms (Current Broker)</relationshipLabel>
        <relationshipName>Proposal_Request_Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Carrier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Carrier</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Funding_Arrangement__c</fullName>
        <label>Current Funding Arrangement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fully Insured</fullName>
                </value>
                <value>
                    <fullName>Self Insured</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Rx__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Rx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Spec_Basis_of_Coverage_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Spec. Basis of Coverage Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Spec_Basis_of_Coverage__c</fullName>
        <label>Current Spec. Basis of Coverage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12/12</fullName>
                </value>
                <value>
                    <fullName>15/12</fullName>
                </value>
                <value>
                    <fullName>12/15</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Assigned__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Assigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Needed_Date_Due_to_Coordinator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Needed (Date Due to Coordinator)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Needed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Needed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Released__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Released</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_In_Progress__c</fullName>
        <formula>RFP_Actual_Receipt_Date__c - Date_Released__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days In Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivered_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Method__c</fullName>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electronic</fullName>
                </value>
                <value>
                    <fullName>Hard Copy</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>FEDEX</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>Courier</fullName>
                </value>
                <value>
                    <fullName>Hand-Delivery</fullName>
                </value>
                <value>
                    <fullName>Email to Account</fullName>
                </value>
                <value>
                    <fullName>Internet Upload</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Person__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental_Disruption_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dental Disruption Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dental_Disruption_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dental Disruption Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dental_Empl_Sponsored_Addl__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dental Empl Sponsored Add'l</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dental_Employer_Sponsored__c</fullName>
        <label>Dental Empl Sponsored</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DHMO</fullName>
                </value>
                <value>
                    <fullName>DHMO/DPOS</fullName>
                </value>
                <value>
                    <fullName>Preferred (PPO)</fullName>
                </value>
                <value>
                    <fullName>Traditional (PAR)</fullName>
                </value>
                <value>
                    <fullName>BlueDental Basic</fullName>
                </value>
                <value>
                    <fullName>BlueDental Plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dental_Geo_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dental Geo Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dental_Geo_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dental Geo Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dental_Voluntary_Addl_Info__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dental Voluntary Add'l Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dental_Voluntary__c</fullName>
        <label>Dental Voluntary</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Traditional (PAR) - No Wait Period</fullName>
                </value>
                <value>
                    <fullName>Preferred (PPO) - No Wait Period</fullName>
                </value>
                <value>
                    <fullName>Traditional (PAR) - Includes Wait Period</fullName>
                </value>
                <value>
                    <fullName>Preferred (PPO) - Includes Wait Period</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disease_Management__c</fullName>
        <inlineHelpText>Package A: Includes Asthma, COPD, CAD &amp; Diabetes
Package B: Includes Package A and impact conditions 
Package C: Includes package B plus ESRD, CKD, CBP, &amp; depression</inlineHelpText>
        <label>Disease Management</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Package A</fullName>
                </value>
                <value>
                    <fullName>Package B</fullName>
                </value>
                <value>
                    <fullName>Package C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>TEXT(RFP_Name__r.Opportunity_Name__r.Division__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <formula>RFP_Name__r.Opportunity_Name__r.Effective_Date__c</formula>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Groupings__c</fullName>
        <label>Employee Groupings</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actives</fullName>
                </value>
                <value>
                    <fullName>All Zips Combined</fullName>
                </value>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Retirees</fullName>
                </value>
                <value>
                    <fullName>Salaried</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CFA</fullName>
                </value>
                <value>
                    <fullName>CFA-NCAS</fullName>
                </value>
                <value>
                    <fullName>NCAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Explain__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Explain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSA_Vendor_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FSA Vendor - Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSA_Vendors__c</fullName>
        <label>FSA Vendors</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ConnectYourCare</fullName>
                </value>
                <value>
                    <fullName>PayFlex (must have CDH)</fullName>
                </value>
                <value>
                    <fullName>HFS Benefits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Bid_Decision__c</fullName>
        <label>Final Bid Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bid</fullName>
                </value>
                <value>
                    <fullName>No Bid</fullName>
                </value>
                <value>
                    <fullName>No Decision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>